# Python_CICD_Repo_Template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: fix-ci.md
.github/workflows/: cd.yml  ci.yml
config/: config.yml
scripts/: init_repo.sh
src/placeholder_name/: __init__.py  config.py
src/placeholder_name/adapters/: cli.py
src/placeholder_name/core/: fsm.py  protocols.py  service.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
